--- a/app/src/main/res/layout/content_custom_course.xml
+++ b/app/src/main/res/layout/content_custom_course.xml
@@ -40,6 +40,21 @@
 
         </android.support.design.widget.TextInputLayout>
 
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp">
+
+            <EditText
+                android:id="@+id/description_et"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/descript"
+                android:inputType="text" />
+
+        </android.support.design.widget.TextInputLayout>
+
         <TextView
             fontPath="fonts/Asap-Bold.ttf"
             android:layout_width="match_parent"
