--- a/app/src/main/res/layout/fragment_subscribed_courses.xml
+++ b/app/src/main/res/layout/fragment_subscribed_courses.xml
@@ -11,99 +11,173 @@
         android:layout_height="match_parent"
         android:fillViewport="true">
 
-        <FrameLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="center">
+            android:orientation="vertical">
 
             <LinearLayout
-                android:id="@+id/view_empty"
+                android:id="@+id/top_bar"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorPrimary"
                 android:gravity="center"
-                android:layout_gravity="center"
-                android:orientation="vertical"
-                android:padding="30dp"
-                android:visibility="gone">
+                android:paddingBottom="8dp"
+                android:paddingTop="8dp">
 
-                <TextView
-                    android:layout_width="match_parent"
+                <ImageView
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:lineSpacingExtra="5dp"
-                    android:text="@string/subscribed_empty"
-                    android:textColor="@color/gray_dark"
-                    android:textSize="@dimen/text_medium" />
-
-                <Button
-                    android:id="@+id/browse_courses_btn"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:background="@drawable/green_border_btn"
-                    android:drawablePadding="20dp"
-                    android:onClick="browseCourses"
-                    android:text="@string/browse_courses"
-                    android:textColor="@drawable/green_btn_txt"
-                    android:textSize="@dimen/text_medium" />
+                    android:layout_gravity="center"
+                    android:contentDescription="@string/app_name"
+                    android:src="@drawable/logo" />
 
             </LinearLayout>
 
-            <LinearLayout
-                android:id="@+id/view_list"
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:visibility="gone">
+                android:layout_height="match_parent">
 
                 <LinearLayout
-                    android:id="@+id/top_bar"
+                    android:id="@+id/view_empty"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/colorPrimary"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
                     android:gravity="center"
-                    android:paddingBottom="8dp"
-                    android:paddingTop="8dp">
+                    android:orientation="vertical"
+                    android:padding="30dp"
+                    android:visibility="gone">
 
-                    <ImageView
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:contentDescription="@string/app_name"
-                        android:src="@drawable/logo" />
+                        android:layout_marginBottom="5dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/welcome"
+                            android:textColor="@color/gray_dark"
+                            android:textSize="@dimen/text_medium" />
+
+                        <TextView
+                            android:id="@+id/username_empty"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="5dp"
+                            android:layout_marginStart="5dp"
+                            android:lineSpacingExtra="3dp"
+                            android:textColor="@color/blue"
+                            android:textSize="@dimen/text_medium" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/comma"
+                            android:textColor="@color/gray_dark"
+                            android:textSize="@dimen/text_medium" />
+
+                    </LinearLayout>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:lineSpacingExtra="5dp"
+                        android:text="@string/subscribed_empty"
+                        android:textColor="@color/gray_dark"
+                        android:textSize="@dimen/text_medium" />
+
+                    <Button
+                        android:id="@+id/browse_courses_btn"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="20dp"
+                        android:background="@drawable/green_border_btn"
+                        android:drawablePadding="20dp"
+                        android:onClick="browseCourses"
+                        android:text="@string/browse_courses"
+                        android:textColor="@drawable/green_btn_txt"
+                        android:textSize="@dimen/text_medium" />
 
                 </LinearLayout>
 
-                <TextView
-                    android:id="@+id/welcome_msg"
-                    fontPath="fonts/Asap-Regular.ttf"
+                <LinearLayout
+                    android:id="@+id/view_list"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="15dp"
-                    android:lineSpacingExtra="3dp"
-                    android:textColor="@color/default_tv_color"
-                    android:textSize="@dimen/text_medium" />
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:visibility="gone">
 
-                <TextView
-                    fontPath="fonts/Asap-Bold.ttf"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginStart="15dp"
-                    android:layout_marginTop="5dp"
-                    android:text="@string/subscribed_courses"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:textSize="@dimen/text_small" />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="5dp"
+                        android:orientation="horizontal"
+                        android:paddingLeft="15dp"
+                        android:paddingRight="15dp"
+                        android:paddingTop="15dp">
 
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/recycler_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:layout_marginTop="5dp" />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/welcome"
+                            android:textColor="@color/gray_dark"
+                            android:textSize="@dimen/text_medium" />
 
-            </LinearLayout>
+                        <TextView
+                            android:id="@+id/username"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="5dp"
+                            android:layout_marginStart="5dp"
+                            android:lineSpacingExtra="3dp"
+                            android:textColor="@color/blue"
+                            android:textSize="@dimen/text_medium" />
 
-        </FrameLayout>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/comma"
+                            android:textColor="@color/gray_dark"
+                            android:textSize="@dimen/text_medium" />
+
+                    </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/welcome_msg"
+                        fontPath="fonts/Asap-Regular.ttf"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:lineSpacingExtra="3dp"
+                        android:paddingBottom="15dp"
+                        android:paddingLeft="15dp"
+                        android:paddingRight="15dp"
+                        android:textColor="@color/default_tv_color"
+                        android:textSize="@dimen/text_medium" />
+
+                    <TextView
+                        fontPath="fonts/Asap-Bold.ttf"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="15dp"
+                        android:layout_marginStart="15dp"
+                        android:text="@string/subscribed_courses"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:textSize="@dimen/text_small" />
+
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/recycler_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10dp"
+                        android:layout_marginTop="5dp" />
+
+                </LinearLayout>
+
+            </FrameLayout>
+
+        </LinearLayout>
 
     </android.support.v4.widget.NestedScrollView>
 
