new subscribed course layout, removed tabs in settings - making it overflow menu

--- a/app/src/main/res/layout/courses_item.xml
+++ b/app/src/main/res/layout/courses_item.xml
@@ -53,6 +53,7 @@
             android:id="@+id/subscribed"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:contentDescription="@string/app_name"
             android:src="@drawable/subscribed"
             android:visibility="gone" />
