--- a/app/src/main/res/layout/fragment_target_date.xml
+++ b/app/src/main/res/layout/fragment_target_date.xml
@@ -23,12 +23,12 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="15dp"
             android:layout_marginTop="15dp"
-            android:text="@string/course_settings"
+            android:text="@string/title"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="@dimen/text_small" />
 
         <TextView
-            android:id="@+id/target_date_tv"
+            android:id="@+id/title"
             fontPath="fonts/Asap-Regular.ttf"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -82,7 +82,6 @@
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:onClick="changeDate"
                 android:text="@string/change"
                 android:textAllCaps="false"
                 android:textColor="@color/colorPrimary"
